--- a/client/src/assets/main.css
+++ b/client/src/assets/main.css
@@ -37,5 +37,15 @@ html {
     opacity: 1;
     transform: translateX(0);
   }
-
+}
+@keyframes fadeInOpacity {
+  0%   {
+    opacity: 0;
+  }
+  50% {
+    opacity: .5;
+  }
+  50% {
+    opacity: 1;
+  }
 }
